--- a/productList.html
+++ b/productList.html
@@ -566,7 +566,7 @@
               </div>
             </div>
             <div id="payment">
-              <img src="./Images/Payment.png" />
+              <img src="./Images/Payment.png" alt="paymnts" />
             </div>
           </div>
         </div>
