--- a/index.html
+++ b/index.html
@@ -272,15 +272,15 @@
                 <i class="fa fa-star" style="font-size: x-small"></i>
                 <i class="fa fa-star" style="font-size: x-small"></i>
               </span>
-              <span id="price">$90.00</span>
+              <span class="price">$90.00</span>
             </p>
             <div class="group-btn">
-              <button id="cart01"><i class="far fa-heart"></i></button>
+              <button class="cart01"><i class="far fa-heart"></i></button>
               <button class="btn">
                 <i class="fa fa-shopping-bag" style="font-size: small"></i>Add
                 to Cart
               </button>
-              <button id="cart01"><i class="fas fa-signal"></i></button>
+              <button class="cart01"><i class="fas fa-signal"></i></button>
             </div>
           </div>
           <div class="card" id="item-2">
@@ -295,15 +295,15 @@
                 <i class="fa fa-star" style="font-size: x-small"></i>
                 <i class="fa fa-star" style="font-size: x-small"></i>
               </span>
-              <span id="price">$90.00</span>
+              <span class="price">$90.00</span>
             </p>
             <div class="group-btn">
-              <button id="cart02"><i class="far fa-heart"></i></button>
+              <button class="cart02"><i class="far fa-heart"></i></button>
               <button class="btn">
                 <i class="fa fa-shopping-bag" style="font-size: small"></i>Add
                 to Cart
               </button>
-              <button id="cart02"><i class="fas fa-signal"></i></button>
+              <button class="cart02"><i class="fas fa-signal"></i></button>
             </div>
           </div>
           <div class="card" id="item-3">
@@ -318,15 +318,15 @@
                 <i class="fa fa-star" style="font-size: x-small"></i>
                 <i class="fa fa-star" style="font-size: x-small"></i>
               </span>
-              <span id="price">$90.00</span>
+              <span class="price">$90.00</span>
             </p>
             <div class="group-btn">
-              <button id="cart03"><i class="far fa-heart"></i></button>
+              <button class="cart03"><i class="far fa-heart"></i></button>
               <button class="btn">
                 <i class="fa fa-shopping-bag" style="font-size: small"></i>Add
                 to Cart
               </button>
-              <button id="cart03"><i class="fas fa-signal"></i></button>
+              <button class="cart03"><i class="fas fa-signal"></i></button>
             </div>
           </div>
           <div class="card" id="item-4">
@@ -341,15 +341,15 @@
                 <i class="fa fa-star" style="font-size: x-small"></i>
                 <i class="fa fa-star" style="font-size: x-small"></i>
               </span>
-              <span id="price">$90.00</span>
+              <span class="price">$90.00</span>
             </p>
             <div class="group-btn">
-              <button id="cart04"><i class="far fa-heart"></i></button>
+              <button class="cart04"><i class="far fa-heart"></i></button>
               <button class="btn">
                 <i class="fa fa-shopping-bag" style="font-size: small"></i>Add
                 to Cart
               </button>
-              <button id="cart04"><i class="fas fa-signal"></i></button>
+              <button class="cart04"><i class="fas fa-signal"></i></button>
             </div>
           </div>
           <div class="card" id="item-5">
@@ -364,15 +364,15 @@
                 <i class="fa fa-star" style="font-size: x-small"></i>
                 <i class="fa fa-star" style="font-size: x-small"></i>
               </span>
-              <span id="price">$90.00</span>
+              <span class="price">$90.00</span>
             </p>
             <div class="group-btn">
-              <button id="cart05"><i class="far fa-heart"></i></button>
+              <button class="cart05"><i class="far fa-heart"></i></button>
               <button class="btn">
                 <i class="fa fa-shopping-bag" style="font-size: small"></i>Add
                 to Cart
               </button>
-              <button id="cart05"><i class="fas fa-signal"></i></button>
+              <button class="cart05"><i class="fas fa-signal"></i></button>
             </div>
           </div>
           <div class="card" id="item-6">
@@ -387,15 +387,15 @@
                 <i class="fa fa-star" style="font-size: x-small"></i>
                 <i class="fa fa-star" style="font-size: x-small"></i>
               </span>
-              <span id="price">$90.00</span>
+              <span class="price">$90.00</span>
             </p>
             <div class="group-btn">
-              <button id="cart06"><i class="far fa-heart"></i></button>
+              <button class="cart06"><i class="far fa-heart"></i></button>
               <button class="btn">
                 <i class="fa fa-shopping-bag" style="font-size: small"></i>Add
                 to Cart
               </button>
-              <button id="cart06"><i class="fas fa-signal"></i></button>
+              <button class="cart06"><i class="fas fa-signal"></i></button>
             </div>
           </div>
           <div class="card" id="item-7">
@@ -410,15 +410,15 @@
                 <i class="fa fa-star" style="font-size: x-small"></i>
                 <i class="fa fa-star" style="font-size: x-small"></i>
               </span>
-              <span id="price">$90.00</span>
+              <span class="price">$90.00</span>
             </p>
             <div class="group-btn">
-              <button id="cart07"><i class="far fa-heart"></i></button>
+              <button class="cart07"><i class="far fa-heart"></i></button>
               <button class="btn">
                 <i class="fa fa-shopping-bag" style="font-size: small"></i>Add
                 to Cart
               </button>
-              <button id="cart07"><i class="fas fa-signal"></i></button>
+              <button class="cart07"><i class="fas fa-signal"></i></button>
             </div>
           </div>
           <div class="card" id="item-8">
@@ -433,15 +433,15 @@
                 <i class="fa fa-star" style="font-size: x-small"></i>
                 <i class="fa fa-star" style="font-size: x-small"></i>
               </span>
-              <span id="price">$90.00</span>
+              <span class="price">$90.00</span>
             </p>
             <div class="group-btn">
-              <button id="cart08"><i class="far fa-heart"></i></button>
+              <button class="cart08"><i class="far fa-heart"></i></button>
               <button class="btn">
                 <i class="fa fa-shopping-bag" style="font-size: small"></i>Add
                 to Cart
               </button>
-              <button id="cart08"><i class="fas fa-signal"></i></button>
+              <button class="cart08"><i class="fas fa-signal"></i></button>
             </div>
           </div>
         </div>
@@ -933,7 +933,7 @@
               </div>
             </div>
             <div id="payment">
-              <img src="./Images/Payment.png" />
+              <img src="./Images/Payment.png" alt="paymnts" />
             </div>
           </div>
         </div>
