--- a/productPage.html
+++ b/productPage.html
@@ -438,7 +438,7 @@
               </div>
             </div>
             <div id="payment">
-              <img src="./Images/Payment.png" />
+              <img src="./Images/Payment.png"  alt="paymnts"  />
             </div>
           </div>
         </div>
