--- a/productPage.html
+++ b/productPage.html
@@ -121,18 +121,12 @@
                 <a href="#"
                   ><i class="fas fa-angle-left" style="font-size: 24px"></i
                   ><span class="tooltiptext"
-                    ><img
-                      src="./Images/handbag01.jpg"
-                      width="70px"
-                      height="auto" /></span
+                    ><img src="./Images/handbag01.jpg" width="70" /></span
                 ></a>
                 <a href="#"
                   ><i class="fas fa-angle-right" style="font-size: 24px"></i
                   ><span class="tooltiptext"
-                    ><img
-                      src="./Images/handbag02.jpg"
-                      width="70px"
-                      height="auto" /></span
+                    ><img src="./Images/handbag02.jpg" width="70" /></span
                 ></a>
               </div>
             </div>
@@ -340,12 +334,7 @@
             <div class="featured-product">
               <h5>Featured Products</h5>
               <div class="product1">
-                <img
-                  src="./Images/product-01.jpg"
-                  width="95"
-                  height="auto"
-                  alt="product"
-                />
+                <img src="./Images/product-01.jpg" width="95" alt="product" />
                 <p>
                   <a href="#">Women Black Top</a>
                   <span class="rating">
@@ -359,12 +348,7 @@
                 </p>
               </div>
               <div class="product2">
-                <img
-                  src="./Images/product-02.jpg"
-                  width="95"
-                  height="auto"
-                  alt="product"
-                />
+                <img src="./Images/product-02.jpg" width="95" alt="product" />
                 <p>
                   <a href="#">Women Black Top</a>
                   <span class="rating">
@@ -438,7 +422,7 @@
               </div>
             </div>
             <div id="payment">
-              <img src="./Images/Payment.png"  alt="paymnts"  />
+              <img src="./Images/Payment.png" alt="paymnts" />
             </div>
           </div>
         </div>
@@ -447,11 +431,7 @@
 
     <!--External JavaScript-->
     <script src="./JavaScript/index.js"></script>
-    <script
-      async
-      src="https://platform.twitter.com/widgets.js"
-      charset="utf-8"
-    ></script>
+    <script async src="https://platform.twitter.com/widgets.js"></script>
     <script>
       $(document).ready(function () {
         $("#ex1").zoom();
