--- a/productPage.html
+++ b/productPage.html
@@ -121,12 +121,18 @@
                 <a href="#"
                   ><i class="fas fa-angle-left" style="font-size: 24px"></i
                   ><span class="tooltiptext"
-                    ><img src="./Images/handbag01.jpg" width="70" /></span
+                    ><img
+                      src="./Images/handbag01.jpg"
+                      width="70"
+                      alt="Popup" /></span
                 ></a>
                 <a href="#"
                   ><i class="fas fa-angle-right" style="font-size: 24px"></i
                   ><span class="tooltiptext"
-                    ><img src="./Images/handbag02.jpg" width="70" /></span
+                    ><img
+                      src="./Images/handbag02.jpg"
+                      width="70"
+                      alt="Popup" /></span
                 ></a>
               </div>
             </div>
@@ -249,13 +255,13 @@
             </span>
           </p>
           <form>
-            <h6 id="label">Nickname <span>*</span></h6>
+            <h6 class="label">Nickname <span>*</span></h6>
 
             <input type="text" id="Username" /><br />
-            <h6 id="label">Summary <span>*</span></h6>
+            <h6 class="label">Summary <span>*</span></h6>
 
             <input type="text" id="summary" /><br />
-            <h6 id="label">Review <span>*</span></h6>
+            <h6 class="label">Review <span>*</span></h6>
             <textarea></textarea>
             <br />
             <button class="btn">Submit Review</button>
@@ -265,39 +271,44 @@
         <div id="Custom-tab" class="product_details" style="display: none">
           <table>
             <tr>
-              <th>Clothing - Single Size Conversion (Continued)</th>
+              <td class="th">Clothing - Single Size Conversion (Continued)</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
             </tr>
             <tr>
-              <td>UK</td>
-              <td>18</td>
-              <td>20</td>
-              <td>22</td>
-              <td>24</td>
-              <td>26</td>
+              <td class="td">UK</td>
+              <td class="td">18</td>
+              <td class="td">20</td>
+              <td class="td">22</td>
+              <td class="td">24</td>
+              <td class="td">26</td>
             </tr>
             <tr>
-              <td>Europian</td>
-              <td>18</td>
-              <td>20</td>
-              <td>22</td>
-              <td>24</td>
-              <td>26</td>
+              <td class="td">Europian</td>
+              <td class="td">18</td>
+              <td class="td">20</td>
+              <td class="td">22</td>
+              <td class="td">24</td>
+              <td class="td">26</td>
             </tr>
             <tr>
-              <td>US</td>
-              <td>18</td>
-              <td>20</td>
-              <td>22</td>
-              <td>24</td>
-              <td>26</td>
+              <td class="td">US</td>
+              <td class="td">18</td>
+              <td class="td">20</td>
+              <td class="td">22</td>
+              <td class="td">24</td>
+              <td class="td">26</td>
             </tr>
             <tr>
-              <td>Australia</td>
-              <td>18</td>
-              <td>20</td>
-              <td>22</td>
-              <td>24</td>
-              <td>26</td>
+              <td class="td">Australia</td>
+              <td class="td">18</td>
+              <td class="td">20</td>
+              <td class="td">22</td>
+              <td class="td">24</td>
+              <td class="td">26</td>
             </tr>
           </table>
         </div>
