--- a/productList2.html
+++ b/productList2.html
@@ -153,11 +153,9 @@
               <form>
                 <label for="product">Sort By </label>
                 <select name="product" id="product">
-                  <option id="value" value="sorting">Product Name</option>
-                  <option id="value" value="sorting">Price</option>
-                  <option id="value" value="sorting" selected="selected">
-                    Relevance
-                  </option>
+                  <option>Product Name</option>
+                  <option>Price</option>
+                  <option selected="selected">Relevance</option>
                 </select>
                 <a href="#"><i class="fas fa-long-arrow-alt-down"></i></a>
               </form>
@@ -165,10 +163,10 @@
             <div class="size">
               <form>
                 <label for="product">Show </label>
-                <select name="product" id="product">
-                  <option value="sorting" selected="selected">12</option>
-                  <option value="sorting">24</option>
-                  <option value="sorting">32</option>
+                <select name="product" id="product2">
+                  <option selected="selected">12</option>
+                  <option>24</option>
+                  <option>32</option>
                 </select>
                 <a href="#" onclick="ReplaceGrid()"
                   ><i class="fas fa-th"></i
@@ -180,7 +178,7 @@
             </div>
           </div>
           <div class="product-list">
-            <div class="card" id="item-1">
+            <div class="card item-1">
               <img
                 src="./Images/New08.jpg"
                 style="width: 150px; height: auto"
@@ -201,21 +199,21 @@
                   occaecat cupidatat non proident, sunt in culpa qui officia
                   deserunt mollit anim id est laborum.
                 </p>
-                <span id="price">$90.00</span>
+                <span class="price">$90.00</span>
                 <div class="group-btn">
                   <button id="btn" class="btn">
                     <i class="fa fa-shopping-bag"></i> Add Cart
                   </button>
-                  <button id="like" class="btn">
+                  <button class="btn like">
                     <i class="far fa-heart"></i>
                   </button>
-                  <button id="like" class="btn">
+                  <button class="btn like">
                     <i class="fas fa-signal"></i>
                   </button>
                 </div>
               </div>
             </div>
-            <div class="card" id="item-1">
+            <div class="card item-1">
               <img
                 src="./Images/New09.jpg"
                 style="width: 150px; height: auto"
@@ -236,21 +234,21 @@
                   occaecat cupidatat non proident, sunt in culpa qui officia
                   deserunt mollit anim id est laborum.
                 </p>
-                <span id="price">$90.00</span>
+                <span class="price">$90.00</span>
                 <div class="group-btn">
                   <button id="btn" class="btn">
                     <i class="fa fa-shopping-bag"></i> Add Cart
                   </button>
-                  <button id="like" class="btn">
+                  <button class="btn like">
                     <i class="far fa-heart"></i>
                   </button>
-                  <button id="like" class="btn">
+                  <button class="btn like">
                     <i class="fas fa-signal"></i>
                   </button>
                 </div>
               </div>
             </div>
-            <div class="card" id="item-1">
+            <div class="card item-1">
               <img
                 src="./Images/New11.jpg"
                 style="width: 150px; height: auto"
@@ -271,21 +269,21 @@
                   occaecat cupidatat non proident, sunt in culpa qui officia
                   deserunt mollit anim id est laborum.
                 </p>
-                <span id="price">$90.00</span>
+                <span class="price">$90.00</span>
                 <div class="group-btn">
                   <button id="btn" class="btn">
                     <i class="fa fa-shopping-bag"></i> Add Cart
                   </button>
-                  <button id="like" class="btn">
+                  <button class="btn like">
                     <i class="far fa-heart"></i>
                   </button>
-                  <button id="like" class="btn">
+                  <button class="btn like">
                     <i class="fas fa-signal"></i>
                   </button>
                 </div>
               </div>
             </div>
-            <div class="card" id="item-1">
+            <div class="card item-1">
               <img
                 src="./Images/New12.jpg"
                 style="width: 150px; height: auto"
@@ -306,21 +304,21 @@
                   occaecat cupidatat non proident, sunt in culpa qui officia
                   deserunt mollit anim id est laborum.
                 </p>
-                <span id="price">$90.00</span>
+                <span class="price">$90.00</span>
                 <div class="group-btn">
                   <button id="btn" class="btn">
                     <i class="fa fa-shopping-bag"></i> Add Cart
                   </button>
-                  <button id="like" class="btn">
+                  <button class="btn like">
                     <i class="far fa-heart"></i>
                   </button>
-                  <button id="like" class="btn">
+                  <button class="btn like">
                     <i class="fas fa-signal"></i>
                   </button>
                 </div>
               </div>
             </div>
-            <div class="card" id="item-1">
+            <div class="card item-1">
               <img
                 src="./Images/Product-1.jpg"
                 style="width: 150px; height: auto"
@@ -341,21 +339,21 @@
                   occaecat cupidatat non proident, sunt in culpa qui officia
                   deserunt mollit anim id est laborum.
                 </p>
-                <span id="price">$90.00</span>
+                <span class="price">$90.00</span>
                 <div class="group-btn">
                   <button id="btn" class="btn">
                     <i class="fa fa-shopping-bag"></i> Add Cart
                   </button>
-                  <button id="like" class="btn">
+                  <button class="btn like">
                     <i class="far fa-heart"></i>
                   </button>
-                  <button id="like" class="btn">
+                  <button class="btn like">
                     <i class="fas fa-signal"></i>
                   </button>
                 </div>
               </div>
             </div>
-            <div class="card" id="item-1">
+            <div class="card item-1">
               <img
                 src="./Images/New07.jpg"
                 style="width: 150px; height: auto"
@@ -376,21 +374,21 @@
                   occaecat cupidatat non proident, sunt in culpa qui officia
                   deserunt mollit anim id est laborum.
                 </p>
-                <span id="price">$90.00</span>
+                <span class="price">$90.00</span>
                 <div class="group-btn">
                   <button id="btn" class="btn">
                     <i class="fa fa-shopping-bag"></i> Add Cart
                   </button>
-                  <button id="like" class="btn">
+                  <button class="btn like">
                     <i class="far fa-heart"></i>
                   </button>
-                  <button id="like" class="btn">
+                  <button class="btn like">
                     <i class="fas fa-signal"></i>
                   </button>
                 </div>
               </div>
             </div>
-            <div class="card" id="item-1">
+            <div class="card item-1">
               <img
                 src="./Images/handbag04.jpg"
                 style="width: 150px; height: auto"
@@ -411,21 +409,21 @@
                   occaecat cupidatat non proident, sunt in culpa qui officia
                   deserunt mollit anim id est laborum.
                 </p>
-                <span id="price">$90.00</span>
+                <span class="price">$90.00</span>
                 <div class="group-btn">
                   <button id="btn" class="btn">
                     <i class="fa fa-shopping-bag"></i> Add Cart
                   </button>
-                  <button id="like" class="btn">
+                  <button class="btn like">
                     <i class="far fa-heart"></i>
                   </button>
-                  <button id="like" class="btn">
+                  <button class="btn like">
                     <i class="fas fa-signal"></i>
                   </button>
                 </div>
               </div>
             </div>
-            <div class="card" id="item-1">
+            <div class="card item-1">
               <img
                 src="./Images/handbag01.jpg"
                 style="width: 150px; height: auto"
@@ -446,15 +444,15 @@
                   occaecat cupidatat non proident, sunt in culpa qui officia
                   deserunt mollit anim id est laborum.
                 </p>
-                <span id="price">$90.00</span>
+                <span class="price">$90.00</span>
                 <div class="group-btn">
                   <button id="btn" class="btn">
                     <i class="fa fa-shopping-bag"></i> Add Cart
                   </button>
-                  <button id="like" class="btn">
+                  <button class="btn like">
                     <i class="far fa-heart"></i>
                   </button>
-                  <button id="like" class="btn">
+                  <button class="btn like">
                     <i class="fas fa-signal"></i>
                   </button>
                 </div>
@@ -495,12 +493,7 @@
             <div class="featured-product">
               <h5>Featured Products</h5>
               <div class="product1">
-                <img
-                  src="./Images/product-01.jpg"
-                  width="95"
-                  height="auto"
-                  alt="product"
-                />
+                <img src="./Images/product-01.jpg" width="95" alt="product" />
                 <p>
                   <a href="#">Women Black Top</a>
                   <span class="rating">
@@ -514,12 +507,7 @@
                 </p>
               </div>
               <div class="product2">
-                <img
-                  src="./Images/product-02.jpg"
-                  width="95"
-                  height="auto"
-                  alt="product"
-                />
+                <img src="./Images/product-02.jpg" width="95" alt="product" />
                 <p>
                   <a href="#">Women Black Top</a>
                   <span class="rating">
@@ -593,7 +581,7 @@
               </div>
             </div>
             <div id="payment">
-              <img src="./Images/Payment.png"  alt="paymnts"  />
+              <img src="./Images/Payment.png" alt="paymnts" />
             </div>
           </div>
         </div>
@@ -602,10 +590,6 @@
 
     <!--External JavaScript-->
     <script src="./JavaScript/productList2.js"></script>
-    <script
-      async
-      src="https://platform.twitter.com/widgets.js"
-      charset="utf-8"
-    ></script>
+    <script async src="https://platform.twitter.com/widgets.js"></script>
   </body>
 </html>
