--- a/productList2.html
+++ b/productList2.html
@@ -201,7 +201,7 @@
                 </p>
                 <span class="price">$90.00</span>
                 <div class="group-btn">
-                  <button id="btn" class="btn">
+                  <button class="btn cart-button">
                     <i class="fa fa-shopping-bag"></i> Add Cart
                   </button>
                   <button class="btn like">
@@ -236,7 +236,7 @@
                 </p>
                 <span class="price">$90.00</span>
                 <div class="group-btn">
-                  <button id="btn" class="btn">
+                  <button class="btn cart-button">
                     <i class="fa fa-shopping-bag"></i> Add Cart
                   </button>
                   <button class="btn like">
@@ -271,7 +271,7 @@
                 </p>
                 <span class="price">$90.00</span>
                 <div class="group-btn">
-                  <button id="btn" class="btn">
+                  <button class="btn cart-button">
                     <i class="fa fa-shopping-bag"></i> Add Cart
                   </button>
                   <button class="btn like">
@@ -306,7 +306,7 @@
                 </p>
                 <span class="price">$90.00</span>
                 <div class="group-btn">
-                  <button id="btn" class="btn">
+                  <button class="btn cart-button">
                     <i class="fa fa-shopping-bag"></i> Add Cart
                   </button>
                   <button class="btn like">
@@ -341,7 +341,7 @@
                 </p>
                 <span class="price">$90.00</span>
                 <div class="group-btn">
-                  <button id="btn" class="btn">
+                  <button class="btn cart-button">
                     <i class="fa fa-shopping-bag"></i> Add Cart
                   </button>
                   <button class="btn like">
@@ -376,7 +376,7 @@
                 </p>
                 <span class="price">$90.00</span>
                 <div class="group-btn">
-                  <button id="btn" class="btn">
+                  <button class="btn cart-button">
                     <i class="fa fa-shopping-bag"></i> Add Cart
                   </button>
                   <button class="btn like">
@@ -411,7 +411,7 @@
                 </p>
                 <span class="price">$90.00</span>
                 <div class="group-btn">
-                  <button id="btn" class="btn">
+                  <button class="btn cart-button">
                     <i class="fa fa-shopping-bag"></i> Add Cart
                   </button>
                   <button class="btn like">
@@ -446,7 +446,7 @@
                 </p>
                 <span class="price">$90.00</span>
                 <div class="group-btn">
-                  <button id="btn" class="btn">
+                  <button class="btn cart-button">
                     <i class="fa fa-shopping-bag"></i> Add Cart
                   </button>
                   <button class="btn like">
